--- a/msvc2015/libaspell/libaspell.vcxproj.filters
+++ b/msvc2015/libaspell/libaspell.vcxproj.filters
@@ -37,11 +37,8 @@
     <Filter Include="Header Files\speller">
       <UniqueIdentifier>{2a598049-bd27-4b4c-a43f-8703e2f3470a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\win32port">
-      <UniqueIdentifier>{7e7ffb1a-8a4b-48b9-b00d-8221d1e2f4eb}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\win32port">
-      <UniqueIdentifier>{7766ab3c-b4f8-4c3c-a817-33dd30f45831}</UniqueIdentifier>
+      <UniqueIdentifier>{3b0045da-36e4-4a2c-b572-aef34e3762f6}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -136,9 +133,6 @@
       <Filter>Source Files\common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\submodule\aspell\common\getdata.cpp">
-      <Filter>Source Files\common</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\submodule\aspell\common\gettext_init.cpp">
       <Filter>Source Files\common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\submodule\aspell\common\info.cpp">
@@ -246,10 +240,7 @@
     <ClCompile Include="..\..\submodule\aspell\modules\speller\default\writable.cpp">
       <Filter>Source Files\speller</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\win32port\dirent.c">
-      <Filter>Source Files\win32port</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\win32port\dirs.cpp">
+    <ClCompile Include="..\..\win32port\gettext_init.cpp">
       <Filter>Source Files\win32port</Filter>
     </ClCompile>
   </ItemGroup>
@@ -512,17 +503,14 @@
     <ClInclude Include="..\..\submodule\aspell\modules\speller\default\wordinfo.hpp">
       <Filter>Header Files\speller</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\win32port\dirent.h">
-      <Filter>Header Files\win32port</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\win32port\settings.h">
-      <Filter>Header Files\win32port</Filter>
-    </ClInclude>
     <ClInclude Include="..\BuildInfo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\win32port\dirs.h">
-      <Filter>Header Files\win32port</Filter>
+    <ClInclude Include="..\..\win32port\settings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\win32port\msvcpatch.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
