--- a/win32port/Aspell.iss.in
+++ b/win32port/Aspell.iss.in
@@ -79,6 +79,9 @@ Source: "{#SourceDir}\data\*"; Excludes: "Makefile*";           DestDir: "{app}\
 Source: "{#SourceDir}\modules\filter\modes\*";                  DestDir: "{app}\share"; Flags: ignoreversion sharedfile; AfterInstall: DosToUnix;
 Source: "{#SourceDir}\scripts\aspell-import";                   DestDir: "{app}\share"; Flags: ignoreversion sharedfile; AfterInstall: DosToUnix;
 
+; Locale`s
+Source: "{#BuildDocDir}\locale\*";                              DestDir: "{app}\locale"; Flags: ignoreversion recursesubdirs
+
 ; Interface
 Source: "{#SourceDir}\interfaces\cc\aspell.h";                  DestDir: "{app}\include"; Flags: ignoreversion
 Source: "{#SourceDir}\interfaces\cc\pspell.h";                  DestDir: "{app}\include\pspell"; Flags: ignoreversion
@@ -93,20 +96,20 @@ Source: "{#BuildDocDir}\html\aspell-dev\*";                     DestDir: "{app}\
 
 [Registry]
 
-Root: HKLM; Subkey: "Software\Aspell"; ValueType: string; ValueName: ""; ValueData: {app}; Flags: uninsdeletekey
-Root: HKLM; Subkey: "Software\Aspell"; ValueType: string; ValueName: "Path"; ValueData: "{app}\bin"; Flags: uninsdeletekey
-Root: HKLM; Subkey: "Software\Aspell"; ValueType: string; ValueName: "UninstallString"; ValueData: {uninstallexe}; Flags: uninsdeletekey
+Root: HKLM; Subkey: "Software\Aspell"; ValueType: string; ValueName: ""; ValueData: {app}; Flags: uninsdeletevalue uninsdeletekeyifempty
+Root: HKLM; Subkey: "Software\Aspell"; ValueType: string; ValueName: "Path"; ValueData: "{app}\bin"; Flags: uninsdeletevalue
+Root: HKLM; Subkey: "Software\Aspell"; ValueType: string; ValueName: "UninstallString"; ValueData: {uninstallexe}; Flags: uninsdeletevalue
 
-Root: HKLM; Subkey: "Software\Aspell"; ValueType: string; ValueName: "Data"; ValueData: "{app}\share";
+Root: HKLM; Subkey: "Software\Aspell"; ValueType: string; ValueName: "Data"; ValueData: "{app}\share"; Flags: uninsdeletevalue
 
 ; Aspell version
-Root: HKLM; Subkey: "Software\Aspell"; ValueType: dword;  ValueName: "MajorVersion";  ValueData: "@ASPELL_VERSION_MAJOR@"; Flags: uninsdeletekey
-Root: HKLM; Subkey: "Software\Aspell"; ValueType: dword;  ValueName: "MinorVersion";  ValueData: "@ASPELL_VERSION_MINOR@"; Flags: uninsdeletekey
-Root: HKLM; Subkey: "Software\Aspell"; ValueType: dword;  ValueName: "PatchVersion";  ValueData: "@ASPELL_VERSION_PATCH@"; Flags: uninsdeletekey
-Root: HKLM; Subkey: "Software\Aspell"; ValueType: dword;  ValueName: "BuildVersion";  ValueData: "@ASPELL_VERSION_BUILD@"; Flags: uninsdeletekey
+Root: HKLM; Subkey: "Software\Aspell"; ValueType: dword;  ValueName: "MajorVersion";  ValueData: "@ASPELL_VERSION_MAJOR@"; Flags: uninsdeletevalue
+Root: HKLM; Subkey: "Software\Aspell"; ValueType: dword;  ValueName: "MinorVersion";  ValueData: "@ASPELL_VERSION_MINOR@"; Flags: uninsdeletevalue
+Root: HKLM; Subkey: "Software\Aspell"; ValueType: dword;  ValueName: "PatchVersion";  ValueData: "@ASPELL_VERSION_PATCH@"; Flags: uninsdeletevalue
+Root: HKLM; Subkey: "Software\Aspell"; ValueType: dword;  ValueName: "BuildVersion";  ValueData: "@ASPELL_VERSION_BUILD@"; Flags: uninsdeletevalue
 
 ; Library versions
-Root: HKLM; Subkey: "Software\Aspell"; ValueType: dword;  ValueName: "AspellVersion"; ValueData: "16";  Flags: uninsdeletekey
+Root: HKLM; Subkey: "Software\Aspell"; ValueType: dword;  ValueName: "AspellVersion"; ValueData: "16"; Flags: uninsdeletevalue
 
 [INI]
 
