--- a/.github/workflows/dictionaries.yml
+++ b/.github/workflows/dictionaries.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest]
+        os: [windows-2019]
 
     steps:
     - uses: actions/checkout@v2
